--- a/mobile_base/.meta-cnc.yaml
+++ b/mobile_base/.meta-cnc.yaml
@@ -1,5 +1,5 @@
-name: mobile-baseline
-label: Mobile Baseline Snippets
+name: mobile-baseline-v81
+label: v8.1 Mobile Baseline Snippets
 description: Mobile Basline Configuration
 type: panos
 extends: skillet_panos_v81
