--- a/ran/.meta-cnc.yaml
+++ b/ran/.meta-cnc.yaml
@@ -2,7 +2,7 @@ name: mobile-ran-v81
 label: v8.1 Mobile RAN Snippets
 description: Mobile RAN Configuration
 type: panos
-extends: mobile_baseline_panos
+extends: mobile-baseline-v81
 
 labels:
   service_type: mobile_panos
