--- a/roaming/.meta-cnc.yaml
+++ b/roaming/.meta-cnc.yaml
@@ -2,7 +2,7 @@ name: mobile-roaming-v81
 label: v8.1 Mobile Roaming Snippets
 description: Mobile Roaming Configuration
 type: panos
-extends: mobile_baseline_panos
+extends: mobile-baseline-v81
 
 labels:
   service_type: mobile_panos
