--- a/sigtran/.meta-cnc.yaml
+++ b/sigtran/.meta-cnc.yaml
@@ -2,7 +2,7 @@ name: mobile-sigtan-v81
 label: v8.1 Mobile Sigtran Snippets
 description: Mobile Sigtran Configuration
 type: panos
-extends: mobile_baseline_panos
+extends: mobile-baseline-v81
 
 labels:
   service_type: mobile_panos
