--- a/ran/.meta-cnc.yaml
+++ b/ran/.meta-cnc.yaml
@@ -11,19 +11,19 @@ variables:
   - name: ENODEB_SUBNET
     description: enodeB Subnet
     default: 192.168.1.0/24
-    type_hint: ip_address
+    type_hint: text
   - name: MME_SUBNET
     description: MME Subnet
     default: 192.168.1.0/24
-    type_hint: ip_address
+    type_hint: text
   - name: SGW_SUBNET
     description: SGW Subnet
     default: 192.168.1.0/24
-    type_hint: ip_address
+    type_hint: text
   - name: SUB_SUBNET
     description: Subscriber Subnet
     default: 192.168.1.0/24
-    type_hint: ip_address
+    type_hint: text
   
 snippets:
   - name: ran-addresses
