Added placeholder variable

--- a/activate_gtp_sctp/.meta-cnc.yaml
+++ b/activate_gtp_sctp/.meta-cnc.yaml
@@ -8,6 +8,10 @@ labels:
   service_type: mobile_panos
 
 variables:
+  - name: PLACEHOLDER
+    description: Variable Placeholder
+    default: Ignore
+    type_hint: text
 
 
 snippets:
