--- a/sigtran/.meta-cnc.yaml
+++ b/sigtran/.meta-cnc.yaml
@@ -21,6 +21,9 @@ snippets:
   - name: sigtran-addresses
     xpath: /config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/address
     file: sigtran-addresses.xml
+  - name: sigtran-address-groups
+    xpath: /config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/address-group
+    file: sigtran-address-groups.xml
   - name: sigtran-security-rules
     xpath: /config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/rulebase/security/rules
     file: sigtran-security-rules.xml
