--- a/ran/.meta-cnc.yaml
+++ b/ran/.meta-cnc.yaml
@@ -29,7 +29,7 @@ snippets:
   - name: ran-addresses
     xpath: /config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/address
     file: ran-addresses.xml
- - name: roaming-address-groups
+  - name: ran-address-groups
     xpath: /config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/address-group
     file: ran-address-groups.xml
   - name: ran-security-rules
