--- a/set_commands/ran/.meta-cnc.yaml
+++ b/set_commands/ran/.meta-cnc.yaml
@@ -2,7 +2,7 @@ name: mobile-ran-set-v81
 label: v8.1 Mobile RAN Snippets as Set Commands
 description: Mobile RAN Configuration as Set Commands
 type: template
-extends:
+extends: mobile-baseline-v81
 
 labels:
   service_type: mobile_base_panos
