--- a/set_commands/roaming/.meta-cnc.yaml
+++ b/set_commands/roaming/.meta-cnc.yaml
@@ -2,7 +2,7 @@ name: mobile-roaming-set-v81
 label: v8.1 Mobile Roaming Snippets as Set Commands
 description: Mobile Roaming Configuration as Set Commands
 type: template
-extends:
+extends: mobile-baseline-v81
 
 labels:
   service_type: mobile_base_panos
