Added to MobileSkillet collection

--- a/mobile_base/.meta-cnc.yaml
+++ b/mobile_base/.meta-cnc.yaml
@@ -5,7 +5,8 @@ type: panos
 extends:
 
 labels:
-  service_type: mobile_base_panos
+  collection:
+    - MobileSkillet
 
 variables:
   - name: FW_NAME
